[ALLI-2702] Fixed PCI logo overlapping text in narrow screen widths on PCI Search front page.

--- a/web/interface/themes/ndl/css/480mobile.css
+++ b/web/interface/themes/ndl/css/480mobile.css
@@ -283,6 +283,12 @@
     #home-timeline {
         display: none;
     }
+
+    /* PCI Front */
+    #pciDescription {
+        width: 470px;
+    }
+
     
     /* Search results */
     
